--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
       <div class="row">
         <div class="col-xl-6 col-lg-6 text-banner">
           <h4 class="subtitle" data-aos="fade-up">
+            Nama : Abdul Azis Al Ayubbi <br />
+            Nim : 1301213493 <br />
+            Kelas : IF4504 <br />
             SELAMAT DATANG DI ZILA<span>VERS.</span>
           </h4>
           <h1 class="title" data-aos="fade-up">
@@ -92,7 +95,9 @@
             reality) membuatmu melihat dunia digital menjadi terasa lebih nyata.
           </p>
           <div class="d-flex" data-aos="fade-up">
-            <a href="#tentang" class="button"  data-aos="fade-up">Mulai Sekarang</a>
+            <a href="#tentang" class="button" data-aos="fade-up"
+              >Mulai Sekarang</a
+            >
             <div class="d-flex video">
               <a
                 data-toggle="modal"
@@ -179,9 +184,9 @@
           />
         </div>
         <div class="col-lg-7">
-          <h4 class="tentang-subtitle"  data-aos="fade-up">TENTANG</h4>
-          <h1 class="tentang-title"  data-aos="fade-up">Apa itu Metaverse?</h1>
-          <p class="tentang-description"  data-aos="fade-up">
+          <h4 class="tentang-subtitle" data-aos="fade-up">TENTANG</h4>
+          <h1 class="tentang-title" data-aos="fade-up">Apa itu Metaverse?</h1>
+          <p class="tentang-description" data-aos="fade-up">
             Pada dasarnya istilah yang berasal dari novel cyberpunk tahun 1992
             "Snow Crash," yang menyiratkan sebuah dunia di mana orang dapat
             berinteraksi satu sama lain dengan menggunakan avatar mereka.
@@ -196,9 +201,9 @@
       </div>
     </section>
     <section id="produk">
-      <h3 class="produk-subtitle"  data-aos="fade-up">TECHNOLOGY METAVERSE</h3>
-      <h1 class="produk-title"  data-aos="fade-up">Membangun Dunia Metaverse</h1>
-      <p class="produk-description"  data-aos="fade-up">
+      <h3 class="produk-subtitle" data-aos="fade-up">TECHNOLOGY METAVERSE</h3>
+      <h1 class="produk-title" data-aos="fade-up">Membangun Dunia Metaverse</h1>
+      <p class="produk-description" data-aos="fade-up">
         Teknologi yang digunakan untuk membangun dunia virtual
       </p>
       <div class="row" style="width: 100%">
@@ -213,8 +218,8 @@
                 data-aos="fade-up"
               />
             </div>
-            <h1 class="pd-title"  data-aos="fade-up">Virtual Reality</h1>
-            <p class="pd-description"  data-aos="fade-up">
+            <h1 class="pd-title" data-aos="fade-up">Virtual Reality</h1>
+            <p class="pd-description" data-aos="fade-up">
               Virtual reality merupakan sebuah teknologi yang membuat pengguna
               dapat berinteraksi seperti halnya di dunia nyata.
             </p>
@@ -238,12 +243,15 @@
                 data-aos="fade-up"
               />
             </div>
-            <h1 class="pd-title"  data-aos="fade-up">Augmanted Reality</h1>
-            <p class="pd-description"  data-aos="fade-up">
+            <h1 class="pd-title" data-aos="fade-up">Augmanted Reality</h1>
+            <p class="pd-description" data-aos="fade-up">
               Augmented reality memungkinkan kamu mengekspresikan diri dengan
               orang-orang yang paling berarti melalui foto dan video.
             </p>
-            <a href="apps/pages/augmanted_reality.html"  data-aos="fade-up" class="button"
+            <a
+              href="apps/pages/augmanted_reality.html"
+              data-aos="fade-up"
+              class="button"
               >Jelajahi</a
             >
           </div>
@@ -256,12 +264,15 @@
               alt="metaverse"
               data-aos="fade-up"
             />
-            <h1 class="pd-title"  data-aos="fade-up">Artificial Intelligence</h1>
-            <p class="pd-description"  data-aos="fade-up">
+            <h1 class="pd-title" data-aos="fade-up">Artificial Intelligence</h1>
+            <p class="pd-description" data-aos="fade-up">
               Artificial Intelligence memiliki kemampuan untuk menganalisis
               gambar pengguna 2D atau 3D untuk membuat avatar yang realistis.
             </p>
-            <a href="apps/pages/artificial_intelligence.html"  data-aos="fade-up" class="button"
+            <a
+              href="apps/pages/artificial_intelligence.html"
+              data-aos="fade-up"
+              class="button"
               >Jelajahi</a
             >
           </div>
@@ -274,20 +285,27 @@
               alt="metaverse"
               data-aos="fade-up"
             />
-            <h1 class="pd-title"  data-aos="fade-up">Avatar 3D</h1>
-            <p class="pd-description"  data-aos="fade-up">
+            <h1 class="pd-title" data-aos="fade-up">Avatar 3D</h1>
+            <p class="pd-description" data-aos="fade-up">
               Avatar 3D dapat disesuaikan dengan cara apa pun yang Anda pilih.
               Mulai dari pakaian karakter dan hal lainnya.
             </p>
-            <a href="apps/pages/avatar_3d.html"  data-aos="fade-up" class="button">Jelajahi</a>
+            <a
+              href="apps/pages/avatar_3d.html"
+              data-aos="fade-up"
+              class="button"
+              >Jelajahi</a
+            >
           </div>
         </div>
       </div>
     </section>
 
     <section id="tools">
-      <h1 class="tools-title"  data-aos="fade-up">Alat Membuat Dunia Metaverse</h1>
-      <p class="tools-description"  data-aos="fade-up">
+      <h1 class="tools-title" data-aos="fade-up">
+        Alat Membuat Dunia Metaverse
+      </h1>
+      <p class="tools-description" data-aos="fade-up">
         Alat atau tools yang digunakan untuk membuat metaverse
       </p>
       <div class="swiper">
@@ -297,8 +315,7 @@
               <img
                 src="apps/assets/images/blender.png"
                 class="swiper-1"
-                alt="" 
-                
+                alt=""
               />
               <h3 class="slider-title">Blender</h3>
             </div>
@@ -340,9 +357,9 @@
     </section>
 
     <section id="sejarah" class="w-100">
-      <h3 class="sejarah-subtitle"  data-aos="fade-up">SEJARAH</h3>
-      <h1 class="sejarah-title"  data-aos="fade-up">Road Map Metaverse</h1>
-      <p class="sejarah-description"  data-aos="fade-up">
+      <h3 class="sejarah-subtitle" data-aos="fade-up">SEJARAH</h3>
+      <h1 class="sejarah-title" data-aos="fade-up">Road Map Metaverse</h1>
+      <p class="sejarah-description" data-aos="fade-up">
         Road Map Metaverse ditujukan untuk menceritakan sejarah pembentukkan
         metaverse
       </p>
@@ -359,9 +376,11 @@
     <section id="galeri">
       <div class="row">
         <div class="col-lg-4">
-          <h3 class="galeri-subtitle"  data-aos="fade-up">GALERI</h3>
-          <h1 class="galeri-title"  data-aos="fade-up">Video Mengenai Metaverse</h1>
-          <p class="galeri-description"  data-aos="fade-up">
+          <h3 class="galeri-subtitle" data-aos="fade-up">GALERI</h3>
+          <h1 class="galeri-title" data-aos="fade-up">
+            Video Mengenai Metaverse
+          </h1>
+          <p class="galeri-description" data-aos="fade-up">
             Video mengenai segala hal tentang metaverse sebagai koneksi sosial
           </p>
         </div>
@@ -374,7 +393,7 @@
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen 
+                allowfullscreen
                 data-aos="fade-up"
               ></iframe>
             </div>
@@ -401,6 +420,15 @@
           </div>
         </div>
       </div>
+      <label for="min">Minimum Value:</label>
+      <input type="number" id="min" name="min" />
+
+      <label for="max">Maximum Value:</label>
+      <input type="number" id="max" name="max" />
+      <button id="cancel">Cancel</button>
+      <button id="calculate">Calculate</button>
+
+      <p>Result: <span id="result"></span></p>
     </section>
 
     <section id="faq">
@@ -645,6 +673,7 @@
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -661,5 +690,62 @@
 
     <script src="apps/javascript/aos.js"></script>
     <script src="apps/javascript/script.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#calculate").click(function () {
+          var minVal = parseInt($("#min").val());
+          var maxVal = parseInt($("#max").val());
+          var result = calculateOddSum(minVal, maxVal);
+          $("#result").text(result);
+        });
+        $("#cancel").click(function () {
+          $("#min").val("");
+          $("#max").val("");
+          $("#result").text("");
+          changeButtonTextAlignment(); // Call the function to change alignment here
+        });
+
+        function calculateOddSum(min, max) {
+          var sum = 0;
+          for (var i = min; i <= max; i++) {
+            if (i % 2 !== 0) {
+              // check if the number is odd
+              sum += i;
+            }
+          }
+          return sum;
+        }
+      });
+
+      let alignment = "left"; 
+      let originalColor = "lightblue";
+      let alternateColor = "lightgreen"; 
+      let isColorChanged = false; 
+
+      document
+        .getElementById("calculate")
+        .addEventListener("click", toggleButtonBackgroundColor);
+
+      function changeButtonTextAlignment() {
+        alignment = alignment === "left" ? "center" : "right";
+        console.log(alignment);
+        document.getElementById("cancel").style.textAlign = alignment;
+        document.getElementById("cancel").style.width = "30%";
+
+        document.getElementById("calculate").style.textAlign = alignment;
+      }
+
+      function toggleButtonBackgroundColor() {
+        if (isColorChanged) {
+          document.getElementById("calculate").style.backgroundColor =
+            originalColor;
+          isColorChanged = false;
+        } else {
+          document.getElementById("calculate").style.backgroundColor =
+            alternateColor;
+          isColorChanged = true;
+        }
+      }
+    </script>
   </body>
 </html>
